--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -10,6 +10,9 @@
         <li class="nav-item">
           <a href="#rules" class="nav-link" data-toggle="tab">Regeln</a>
         </li>
+        <li class="nav-item">
+          <a href="#comingUpdates" class="nav-link" data-toggle="tab">Updates</a>
+        </li>
       </ul>
       <br>
 
@@ -29,12 +32,14 @@
         </div>
 
         <div class="tab-pane fade" id="rules">
+          <h5>REGELN</h5>
           <p>Quelle: www.tv-badminton.de</p>
           <p>Das Ranglistensystem entspricht einem Tannenbaum und teilt die Ranglistenspieler/-innen in verschiedene Reihen
             ein. In der Reihe 1 steht die Nummer 1, in der Reihe 2 die Nummer 2 und 3, in der Reihe 3 die Nummer 4, 5 und
             6, in der Reihe 4 die Nummer 7, 8, 9 und 10, usw. siehe unten.</p>
           <img src="../../../assets/images/pyramid.png" alt="Tannenbaum" class="img-fluid">
-          <br><br>
+          <br>
+          <br>
           <p>In der Reihe, in die man sich hineingespielt hat, darf man jeden Spieler fordern. Man hat aber auch das Recht,
             in der nächsthöheren Reihe diejenigen zu fordern, die rechts vor einem stehen. Zusätzlich hat der an Nummer 3
             gesetzte Spieler das Recht, den an Nummer 1 gesetzten Spieler herauszufordern. Befinden sich darunter neutralisierte
@@ -88,8 +93,9 @@
           </p>
           <p>Fordert ein Spieler einen anderen Spieler heraus oder ist ein Spieler selbst gefordert worden, dann darf er erst
             wieder gefordert werden oder selbst fordern, wenn das vorherige Spiel beendet ist und die Rangliste neu berechnet
-            wurde. <br> Gewinnt ein Forderer sein Forderungsspiel, ändern sich die Positionen der Rangliste. Damit ist erst
-            nach der Beendigung des Spieles feststellbar, wer die beiden Spieler fordern darf.</p>
+            wurde.
+            <br> Gewinnt ein Forderer sein Forderungsspiel, ändern sich die Positionen der Rangliste. Damit ist erst nach der
+            Beendigung des Spieles feststellbar, wer die beiden Spieler fordern darf.</p>
           <p>
             Gespielt wird nach den Regeln des HBV (Rallyepoint-Zählweise). Es entscheidet der Gewinn von zwei Sätzen. Ein Satz geht bis
             21 Punkte (2 Punkte Vorsprung, maximal 30 Punkte), jeder Ballwechsel bringt einen Punkt.
@@ -114,9 +120,23 @@
 
         </div>
 
-      </div>
+        <div class="tab-pane fade" id="comingUpdates">
 
+          <h5>
+            Geplante Updates:
+          </h5>
+          <ul>
+            <li>
+              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" schreiben zu können, um z.B. einen Termin festlegen zu können.
+            </li>
+            <li>
+              Die Möglichkeit ein Profilbild hochladen zu können.
+            </li>
+          </ul>
+
+        </div>
+
+      </div>
+      <div class="col"></div>
     </div>
-    <div class="col"></div>
   </div>
-</div>
