Layout improvements. Mainly Bootstrap-Grid-System redesign. Some button changes.

--- a/src/app/challenge/active-challenges/active-challenges.component.html
+++ b/src/app/challenge/active-challenges/active-challenges.component.html
@@ -1,15 +1,15 @@
 <div class="container py-3">
-  <div class="row">
+  <div class="row justify-content-center">
 
     <!-- Side-Navigation -->
-    <div class="col-4">
+    <div class="col-4 col-md-3 col-lg-2">
       <div class="nav flex-column nav-pills bg-light" id="tab" role="tablist" aria-orientation="vertical">
         <a class="nav-link active" id="active-tab" data-toggle="pill" href="#active" role="tab" aria-controls="active" aria-selected="true">Aktuell</a>
         <a class="nav-link" id="completed-tab" data-toggle="pill" href="#completed" role="tab" aria-controls="completed" aria-selected="true">Abgeschlossen</a>
       </div>
     </div>
 
-    <div class="col">
+    <div class="col-8 col-md-7 col-lg-6">
       <div class="tab-content" id="tab-content">
 
         <!-- Active challenges -->
