--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,20 +1,20 @@
 <div class="container py-3">
-  <div class="row">
-    <div class="col"></div>
-    <div class="col-10 col-sm-10 col-md-10 col-lg-7">
-
-      <ul class="nav nav-tabs">
-        <li class="nav-item">
-          <a href="#home" class="nav-link active" data-toggle="tab">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="#rules" class="nav-link" data-toggle="tab">Regeln</a>
-        </li>
-        <li class="nav-item">
-          <a href="#comingUpdates" class="nav-link" data-toggle="tab">Updates</a>
-        </li>
-      </ul>
-      <br>
+  <div class="row justify-content-center">
+    <div class="col-md-10 col-lg-8">
+      <div>
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a href="#home" class="nav-link active" data-toggle="tab">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#rules" class="nav-link" data-toggle="tab">Regeln</a>
+          </li>
+          <li class="nav-item">
+            <a href="#comingUpdates" class="nav-link" data-toggle="tab">Updates</a>
+          </li>
+        </ul>
+        <br>
+      </div>
 
       <div class="tab-content">
 
@@ -127,7 +127,8 @@
           </h5>
           <ul>
             <li>
-              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" schreiben zu können, um z.B. einen Termin festlegen zu können.
+              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" schreiben
+              zu können, um z.B. einen Termin festlegen zu können.
             </li>
             <li>
               Die Möglichkeit ein Profilbild hochladen zu können.
@@ -135,8 +136,6 @@
           </ul>
 
         </div>
-
       </div>
-      <div class="col"></div>
     </div>
   </div>
