--- a/src/app/auth/signin/edit-player/edit-player.component.html
+++ b/src/app/auth/signin/edit-player/edit-player.component.html
@@ -1,50 +1,70 @@
 <div class="container mx-auto py-3" style="width: 400px;" *ngIf="!player">
-  <h3>Lade Spielerprofil...</h3>
+  <div class="row">
+    <h3>Lade Spielerprofil...</h3>
+  </div>
 </div>
 
-<div *ngIf="player">
-
-  <div class="container mt-3">
-    <h4>{{ player.firstName }}'s persönlicher Bereich</h4>
-    <hr>
+<div class="container" *ngIf="player">
+  <div class="row mt-3">
+    <div class="col">
+      <h4>{{ player.firstName }}'s persönlicher Bereich</h4>
+      <hr>
+    </div>
   </div>
 
   <!-- This area only appears when there is no active challenge on this player. -->
-  <div class="container mt-3" *ngIf="player.challenged === false">
-    <h5>Einen Spieler herausfordern:</h5>
-    <button class="btn btn-primary" style="cursor: pointer" routerLink="/challenge">Fordern</button>
-    <hr>
+  <div class="row mt-3" *ngIf="player.challenged === false">
+    <div class="col">
+      <h5>Einen Spieler herausfordern:</h5>
+      <button class="btn btn-primary" style="cursor: pointer" routerLink="/challenge">Fordern</button>
+    </div>
   </div>
 
   <!-- This area only appears when there exists an active challenge. -->
-  <div class="container" *ngIf="player.challenged === true">
-    <p class="bg-warning text-center">
-      Du hast momentan ein offenes Ranglistenspiel gegen {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName
-      }}.
-    </p>
+  <div class="row justify-content-center" *ngIf="player.challenged === true">
+    <div class="col">
 
-    <!-- Entering score of current challenge. -->
-    <p class="text-center">
-      <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#expandScoreButton">Ergebnis eintragen</button>
-    </p>
-    <div class="collapse" id="expandScoreButton">
-      <form class="form-inline" #selectWinnerForm="ngForm" data-toggle="validator">
-        <div class="form-check form-check-inline">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="selectWinner" id="selectPlayer" value="winnerIsPlayer" required [(ngModel)]="winner"> {{ player.firstName }} {{ player.lastName }}
-          </label>
+      <div class="row">
+        <div class="col">
+          <p class="bg-warning text-center">
+            Du hast momentan ein offenes Ranglistenspiel gegen {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName
+            }}.
+          </p>
         </div>
-        <div class="form-check form-check-inline">
-          <label class="form-check-label">
-            <input class="form-check-input" type="radio" name="selectWinner" id="selectOpponent" value="winnerIsOpponent" required [(ngModel)]="winner"> {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
-          </label>
+      </div>
+
+      <!-- Entering score of current challenge. -->
+      <div class="row justify-content-center">
+        <div class="col">
+          <p class="text-center">
+            <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#expandScoreButton">
+              Ergebnis eintragen
+            </button>
+          </p>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!selectWinnerForm.form.valid" data-toggle="modal" data-target="#winnerModal">
-          Senden
-        </button>
-      </form>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-auto">
+          <div class="collapse" id="expandScoreButton">
+            <form class="form-inline" #selectWinnerForm="ngForm" data-toggle="validator">
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="selectWinner" id="selectPlayer" value="winnerIsPlayer" required [(ngModel)]="winner"> {{ player.firstName }} {{ player.lastName }}
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <label class="form-check-label">
+                  <input class="form-check-input" type="radio" name="selectWinner" id="selectOpponent" value="winnerIsOpponent" required [(ngModel)]="winner"> {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
+                </label>
+              </div>
+              <button type="submit" class="btn btn-outline-danger" [disabled]="!selectWinnerForm.form.valid" data-toggle="modal" data-target="#winnerModal">
+                Senden
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-    <hr>
   </div>
 
   <!-- Modal for Winner-Confirmation. -->
@@ -79,95 +99,97 @@
       </div>
     </div>
   </div>
+  <!-- Modal end. -->
 
-  <form class="container mt-3" [formGroup]="personalForm" novalidate>
+  <!-- Form (user details) -->
+  <div class="row">
+    <div class="col">
+      <form [formGroup]="personalForm" novalidate>
 
-    <div class="container">
-      <div class="row">
-        <h5>Dein Spielerprofil:</h5>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <label>Vorname:
-            <input type="text" class="form-control" formControlName="firstName">
-          </label>
+        <div class="row">
+          <div class="col">
+            <hr>
+            <h5>Dein Spielerprofil:</h5>
+          </div>
         </div>
-        <div class="col-md-6 mb-3">
-          <label>Nachname:
-            <input type="text" class="form-control" formControlName="lastName" id="firstname">
-          </label>
+
+        <div class="row">
+          <div class="col">
+            <label>Vorname:
+              <input type="text" class="form-control" formControlName="firstName">
+            </label>
+            <label>Nachname:
+              <input type="text" class="form-control" formControlName="lastName" id="firstname">
+            </label>
+            <label>Email:
+              <input type="text" class="form-control" formControlName="email" id="firstname" readonly>
+            </label>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-3">
-          <label>Email:
-            <input type="text" class="form-control" formControlName="email" id="firstname" readonly>
-          </label>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-
-      <!-- Button trigger modal for update -->
-      <button class="btn btn-success m-1" type="submit" data-toggle="modal" data-target="#updatePlayer" style="cursor: pointer">
-        Aktualisieren
-      </button>
-
-      <!-- Modal for update -->
-      <div class="modal fade" id="updatePlayer" tabindex="-1" role="dialog" aria-labelledby="updatePlayer" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="updateLabel">Spieler updaten</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
+        <div class="row">
+          <div class="col">
+            <!-- Button trigger modal for update -->
+              <button class="btn btn-outline-success mb-1" type="submit" data-toggle="modal" data-target="#updatePlayer" style="cursor: pointer">
+                Aktualisieren
               </button>
-            </div>
-            <div class="modal-body">
-              Möchteset Du {{ player.firstName }} {{ player.lastName }} wirklich aktualisieren?
-            </div>
-            <div class="modal-footer">
-              <button class="btn btn-success" data-dismiss="modal" (click)="onUpdate()">Aktualisieren</button>
-              <button class="btn btn-danger" data-dismiss="modal">Abbrechen</button>
+              <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updateEmail" disabled>
+              Passwort ändern
+            </button> -->
+              <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updatePicture" disabled>
+              Profilbild hochladen
+            </button> -->
+              <!-- Button trigger modal for delete -->
+              <button class="btn btn-outline-danger mb-1" data-toggle="modal" data-target="#deletePlayer" style="cursor: pointer">
+                {{player.firstName}} Löschen
+              </button>
+          </div>
+        </div>
+
+        <!-- Modal for update -->
+        <div class="modal fade" id="updatePlayer" tabindex="-1" role="dialog" aria-labelledby="updatePlayer" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="updateLabel">Spielerdaten aktualisieren</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                {{ player.firstName }}, möchtest Du Deine Daten wirklich aktualisieren?
+              </div>
+              <div class="modal-footer">
+                <button class="btn btn-success" data-dismiss="modal" (click)="onUpdate()">Aktualisieren</button>
+                <button class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <button class="btn btn-outline-primary m-1" type="button" data-toggle="modal" data-target="#updateEmail" disabled>
-        Password ändern
-      </button>
-      <button class="btn btn-outline-primary m-1" type="button" data-toggle="modal" data-target="#updatePicture" disabled>
-        Profilbild hochladen
-      </button>
-
-      <!-- Button trigger modal for delete -->
-      <button class="btn btn-danger m-1" data-toggle="modal" data-target="#deletePlayer" style="cursor: pointer">
-        {{player.firstName}} Löschen
-      </button>
-
-      <!-- Modal for delete -->
-      <div class="modal fade" id="deletePlayer" tabindex="-1" role="dialog" aria-labelledby="deleteLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="deleteLabel">Spieler löschen</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              Möchtest Du {{ player.firstName }} {{ player.lastName }} wirklich löschen?
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-danger" (click)="onDelete()" data-dismiss="modal">{{ player?.firstName }} löschen</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal">Abbrechen</button>
+        <!-- Modal for delete -->
+        <div class="modal fade" id="deletePlayer" tabindex="-1" role="dialog" aria-labelledby="deleteLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="deleteLabel">Spieler löschen</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                {{ player.firstName }}, möchtest Du Deinen gesamten Account unwiderruflich löschen?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-danger" (click)="onDelete()" data-dismiss="modal">{{ player?.firstName }} löschen</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
+      </form>
     </div>
-  </form>
+  </div>
+
 </div>
