--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,24 +1,28 @@
 <div class="container py-3">
 
-  <div class="row">
-    <div class="col-12 text-center">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6 text-center">
       <h5 *ngIf="gender === 'men'">Rangliste Männer</h5>
       <h5 *ngIf="gender === 'women'">Rangliste Frauen</h5>
     </div>
   </div>
 
-  <ul class="nav nav-tabs">
-    <li class="nav-item">
-      <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Männer</a>
-    </li>
-    <li class="nav-item">
-      <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Frauen</a>
-    </li>
-  </ul>
+  <div class="row justify-content-center py-3">
+    <div class="col-md-8 col-lg-6">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a href="#table" class="nav-link active" data-toggle="tab" (click)="onChangeToMale()">Männer</a>
+        </li>
+        <li class="nav-item">
+          <a href="#table" class="nav-link" data-toggle="tab" (click)="onChangeToFemale()">Frauen</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-  <div class="row py-2">
-    <div class="col-2"></div>
-    <div class="col-xs-8 col-sm-12 col-md-8 col-lg-6">
+  <div class="row justify-content-center py-2">
+
+    <div class="col-md-8 col-lg-6">
       <div class="tab-content">
         <div class="tab-pane active fade in show" id="table">
           <table class="table table-striped table-hover table-sm text-center">
@@ -54,6 +58,5 @@
       <br>
       <small>*NEU = Dieser Spieler hat sich kürzlich erst registriert und muss erst freigeschaltet werden.</small>
     </div>
-    <div class="col-2"></div>
   </div>
 </div>
