Fixed a bug in edit-player-component. When the challenger has won the match, and the opponent would try to enter the score, there was no recalculation on ranks. The problem was, that a boolean was saved as a string because of quotation marks in a method.

--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -22,7 +22,11 @@
 
   <div class="row justify-content-center py-2">
 
-    <div class="col-md-8 col-lg-6">
+    <div *ngIf="!(players|async)?.length">
+      <h5>Lade Spielerdaten...</h5>
+    </div>
+
+    <div class="col-md-8 col-lg-6" *ngIf="(players|async)?.length">
       <div class="tab-content">
         <div class="tab-pane active fade in show" id="table">
           <table class="table table-striped table-hover table-sm text-center">
