--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -50,7 +50,7 @@
           <ul class="dropdown-menu dropdown-menu-right">
             <li>
               <a class="dropdown-item" style="cursor: pointer;" routerLink="/signin/edit">
-                <i class="fa fa-sign-out fa-fw" aria-hidden="true"></i>Persönlicher Bereich</a>
+                <i class="fa fa-user fa-fw" aria-hidden="true"></i>Persönlicher Bereich</a>
             </li>
             <li>
               <a class="dropdown-item" (click)="onLogout()" style="cursor: pointer;">
@@ -79,9 +79,8 @@
 
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="SignIn">
             <a class="dropdown-item" routerLink="signup">
-              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren</a>
-            <a class="dropdown-item" routerLink="players/list">
-              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Admin</a>
+              <i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Registrieren
+            </a>
           </div>
         </div>
       </li>
