Some layout changes (Grid in players area). Some additional informations on registration.

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -31,6 +31,10 @@
           </div>
         </div>
 
+        <div class="alert alert-warning small p-2">
+          Das Passwort muss mindestens 6 Zeichen lang sein!
+        </div>
+
         <div formGroupName="password">
           <div class="input-group">
             <span class="input-group-addon"><i class="fa fa-key fa-lg"></i></span>
@@ -40,6 +44,10 @@
             <span class="input-group-addon"><i class="fa fa-key fa-lg"></i></span>
             <input type="password" class="form-control" formControlName="confirmPassword" password placeholder="Passwort wiederholen">
           </div>
+        </div>
+
+        <div class="alert alert-warning small p-2">
+          Die Damen können auch bei den Männern mitspielen. Dazu müsst Ihr euch jedoch einen zweiten Account erstellen und als Geschlecht "männlich" auswählen.
         </div>
 
         <div class="input-group">
