--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -20,23 +20,28 @@
 
         <div class="tab-pane text-center active fade in show" id="home">
           <h5>Badminton-Vereinsrangliste</h5>
-          <img src="../../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo">
+          <img src="../../assets/images/rww-logo.png" class="img-fluid" alt="RW-Logo">
           <hr>
           <h6>
             Falls du noch nicht registriert bist, klicke
             <a routerLink="/signup">hier.</a>
           </h6>
           <hr>
+          <div class="alert alert-warning text-left p-2">
+            Die Damen können auch bei den Herren mitspielen. Ihr müsst Euch einen zweiten Account erstellen und das Geschlecht "männlich" auswählen.
+          </div>
           <div class="text-left">
             <p>
               Es wird zunächst eine einwöchige Registrierungsphase geben, in der sich jeder Spieler, der mitmachen möchte, anmelden kann.
-              Danach werden die Ränge laut Meldeliste fest gesetzt.
+              Danach werden die Ränge laut Meldeliste festgesetzt.
               <br>Spieler, die bei Rot-Weiss Walldorf Mitglied sind, aber bei anderen Vereinen spielen, bekommen die Möglichkeit
               sich an einer beliebigen Stelle einzufordern.
-              <br>Verlieren sie jedoch diese Spiel, werden sie am Ende der Rangliste eingereiht.
+              <br>Verlieren sie jedoch dieses Spiel, werden sie am Ende der Rangliste eingereiht.
             </p>
             <p>
-              Die Registrierungsphase beginnt am <span class="font-weight-bold">04.12.2017</span> und endet am <span class="font-weight-bold">11.12.2017</span>.
+              Die Registrierungsphase beginnt am
+              <span class="font-weight-bold">04.12.2017</span> und endet am
+              <span class="font-weight-bold">11.12.2017</span>.
             </p>
           </div>
         </div>
@@ -49,7 +54,7 @@
             1 steht die Nummer 1, in Reihe 2 die Nummer 2 und Nummer 3, in Reihe 3 die Nummer 4, 5 und 6, in Reihe 4 die
             Nummer 7, 8, 9 und 10, usw.... (siehe Bild unten).
           </p>
-          <img src="../../../assets/images/pyramid.png" alt="Tannenbaum" class="img-fluid">
+          <img src="../../assets/images/pyramid.png" alt="Tannenbaum" class="img-fluid">
           <br>
           <br>
           <p>
@@ -157,14 +162,21 @@
           <hr>
           <ul>
             <li>
-              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" schreiben
-              zu können, um z.B. einen Termin festlegen zu können.
+              "Passwort vergessen"-Funktion.
+            </li>
+            <li>
+              Email-Benachrichtigung bei Forderungseingang.
+            </li>
+            <li>
+              Bei einer aktiven Forderung sollen beide Spieler die Möglichkeit haben, Kommentare unter ihre "aktive Forderung" zu schreiben,
+              um z.B. einen Termin festlegen zu können.
             </li>
             <li>
               Die Möglichkeit ein Profilbild hochladen zu können.
             </li>
             <li>
-              Die Funktion "Neutralisieren". Ein Spieler, der z.B. in den Urlaub fährt, soll die Möglichkeit haben, sich in dieser Zeit neutralisieren zu können.
+              Die Funktion "Neutralisieren". Ein Spieler, der z.B. in den Urlaub fährt, soll die Möglichkeit haben, sich in dieser Zeit
+              neutralisieren zu können.
             </li>
           </ul>
 
