--- a/src/app/auth/signin/edit-player/edit-player.component.html
+++ b/src/app/auth/signin/edit-player/edit-player.component.html
@@ -1,194 +1,207 @@
-<div class="container mx-auto py-3" style="width: 400px;" *ngIf="!player">
-  <div class="row">
-    <h3>Lade Spielerprofil...</h3>
+<div class="container py-3" *ngIf="!player">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+      <h3>Lade Spielerprofil...</h3>
+    </div>
   </div>
 </div>
 
-<div class="container" *ngIf="player">
-  <div class="row mt-3">
-    <div class="col">
-      <h4>{{ player.firstName }}'s persönlicher Bereich</h4>
-      <hr>
-    </div>
-  </div>
-
-  <!-- This area only appears when there is no active challenge on this player. -->
-  <div class="row mt-3" *ngIf="player.challenged === false">
-    <div class="col">
-      <h5>Einen Spieler herausfordern:</h5>
-      <button class="btn btn-primary" style="cursor: pointer" routerLink="/challenge">Fordern</button>
-    </div>
-  </div>
-
-  <!-- This area only appears when there exists an active challenge. -->
-  <div class="row justify-content-center" *ngIf="player.challenged === true">
-    <div class="col">
+<div class="container py-3" *ngIf="player">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-12 col-md-10 col-lg-8">
 
       <div class="row">
         <div class="col">
-          <p class="bg-warning text-center">
-            Du hast momentan ein offenes Ranglistenspiel gegen {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName
-            }}.
-          </p>
+          <h4>{{ player.firstName }}'s persönlicher Bereich</h4>
+          <hr>
         </div>
       </div>
 
-      <!-- Entering score of current challenge. -->
-      <div class="row justify-content-center">
+      <!-- This area only appears when there is no active challenge on this player. -->
+      <div class="row" *ngIf="player.challenged === false">
         <div class="col">
-          <p class="text-center">
-            <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#expandScoreButton">
-              Ergebnis eintragen
-            </button>
-          </p>
+          <h5>Einen Spieler herausfordern:</h5>
+          <button class="btn btn-primary" style="cursor: pointer" routerLink="/challenge">Fordern</button>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <div class="collapse" id="expandScoreButton">
-            <form class="form-inline" #selectWinnerForm="ngForm" data-toggle="validator">
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="selectWinner" id="selectPlayer" value="winnerIsPlayer" required [(ngModel)]="winner"> {{ player.firstName }} {{ player.lastName }}
+
+      <!-- This area only appears when there exists an active challenge. -->
+      <div class="row justify-content-center" *ngIf="player.challenged === true">
+        <div class="col">
+
+          <div class="row">
+            <div class="col">
+              <p class="bg-warning text-center">
+                Du hast momentan ein offenes Ranglistenspiel gegen {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName
+                }}.
+              </p>
+            </div>
+          </div>
+
+          <!-- Entering score of current challenge. -->
+          <div class="row justify-content-center">
+            <div class="col">
+              <p class="text-center">
+                <button class="btn btn-outline-primary" data-toggle="collapse" data-target="#expandScoreButton">
+                  Sieger eintragen
+                </button>
+              </p>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-auto">
+              <div class="collapse" id="expandScoreButton">
+                <form class="form-inline" #selectWinnerForm="ngForm" data-toggle="validator">
+                  <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="selectWinner" id="selectPlayer" value="winnerIsPlayer" required [(ngModel)]="winner"> {{ player.firstName }} {{ player.lastName }}
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <label class="form-check-label">
+                      <input class="form-check-input" type="radio" name="selectWinner" id="selectOpponent" value="winnerIsOpponent" required [(ngModel)]="winner"> {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
+                    </label>
+                  </div>
+                  <button type="submit" class="btn btn-outline-danger" [disabled]="!selectWinnerForm.form.valid" data-toggle="modal" data-target="#winnerModal">
+                    Senden
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal for Winner-Confirmation. -->
+      <div class="modal fade" id="winnerModal" *ngIf="player.challenged === true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Sieger bestätigen</h5>
+            </div>
+            <div class="modal-body">
+              <div *ngIf="winner === 'winnerIsPlayer'">
+                Der Sieger dieser Partie lautet:
+                <h3>
+                  <span class="badge badge-primary">
+                    {{ player.firstName }} {{ player.lastName }}
+                  </span>
+                </h3>
+              </div>
+              <div *ngIf="winner === 'winnerIsOpponent'">
+                Der Sieger dieser Partie lautet:
+                <h3>
+                  <span class="badge badge-primary">
+                    {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
+                  </span>
+                </h3>
+              </div>
+              <p>Sobald Du auf Bestätigen klickst, wird die Rangliste aktualisiert.</p>
+            </div>
+            <div class="modal-footer">
+              <button class="btn btn-success" data-dismiss="modal" (click)="selectWinner()">Bestätigen</button>
+              <button class="btn btn-danger" data-dismiss="modal">Abbrechen</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal end. -->
+
+      <!-- Form (user details) -->
+      <div class="row">
+        <div class="col">
+          <form [formGroup]="personalForm" novalidate>
+
+            <div class="row">
+              <div class="col">
+                <hr>
+                <h5>Dein Spielerprofil:</h5>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <label>Vorname:
+                  <input type="text" class="form-control" formControlName="firstName">
+                </label>
+                <label>Nachname:
+                  <input type="text" class="form-control" formControlName="lastName" id="firstname">
+                </label>
+                <label>Email:
+                  <input type="text" class="form-control" formControlName="email" id="firstname" readonly>
                 </label>
               </div>
-              <div class="form-check form-check-inline">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="radio" name="selectWinner" id="selectOpponent" value="winnerIsOpponent" required [(ngModel)]="winner"> {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
-                </label>
-              </div>
-              <button type="submit" class="btn btn-outline-danger" [disabled]="!selectWinnerForm.form.valid" data-toggle="modal" data-target="#winnerModal">
-                Senden
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+            </div>
 
-  <!-- Modal for Winner-Confirmation. -->
-  <div class="modal fade" id="winnerModal" *ngIf="player.challenged === true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">Sieger bestätigen</h5>
-        </div>
-        <div class="modal-body">
-          <div *ngIf="winner === 'winnerIsPlayer'">
-            Der Sieger dieser Partie lautet:
-            <h3>
-              <span class="badge badge-primary">
-                {{ player.firstName }} {{ player.lastName }}
-              </span>
-            </h3>
-          </div>
-          <div *ngIf="winner === 'winnerIsOpponent'">
-            Der Sieger dieser Partie lautet:
-            <h3>
-              <span class="badge badge-primary">
-                {{ player.activeChallenge.opponentsFirstName }} {{ player.activeChallenge.opponentsLastName }}
-              </span>
-            </h3>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal" (click)="selectWinner()">Bestätigen</button>
-          <button class="btn btn-danger" data-dismiss="modal">Abbrechen</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Modal end. -->
-
-  <!-- Form (user details) -->
-  <div class="row">
-    <div class="col">
-      <form [formGroup]="personalForm" novalidate>
-
-        <div class="row">
-          <div class="col">
-            <hr>
-            <h5>Dein Spielerprofil:</h5>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <label>Vorname:
-              <input type="text" class="form-control" formControlName="firstName">
-            </label>
-            <label>Nachname:
-              <input type="text" class="form-control" formControlName="lastName" id="firstname">
-            </label>
-            <label>Email:
-              <input type="text" class="form-control" formControlName="email" id="firstname" readonly>
-            </label>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col">
-            <!-- Button trigger modal for update -->
-              <button class="btn btn-outline-success mb-1" type="submit" data-toggle="modal" data-target="#updatePlayer" style="cursor: pointer">
-                Aktualisieren
-              </button>
-              <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updateEmail" disabled>
+            <div class="row">
+              <div class="col">
+                <!-- Button trigger modal for update -->
+                <button class="btn btn-outline-success mb-1" type="submit" data-toggle="modal" data-target="#updatePlayer" style="cursor: pointer">
+                  Aktualisieren
+                </button>
+                <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updateEmail" disabled>
               Passwort ändern
             </button> -->
-              <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updatePicture" disabled>
+                <!-- <button class="btn btn-outline-secondary mb-1" type="button" data-toggle="modal" data-target="#updatePicture" disabled>
               Profilbild hochladen
             </button> -->
-              <!-- Button trigger modal for delete -->
-              <button class="btn btn-outline-danger mb-1" data-toggle="modal" data-target="#deletePlayer" style="cursor: pointer">
-                {{player.firstName}} Löschen
-              </button>
-          </div>
-        </div>
-
-        <!-- Modal for update -->
-        <div class="modal fade" id="updatePlayer" tabindex="-1" role="dialog" aria-labelledby="updatePlayer" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="updateLabel">Spielerdaten aktualisieren</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
+                <!-- Button trigger modal for delete -->
+                <button class="btn btn-outline-danger mb-1" data-toggle="modal" data-target="#deletePlayer" style="cursor: pointer">
+                  {{player.firstName}} Löschen
                 </button>
               </div>
-              <div class="modal-body">
-                {{ player.firstName }}, möchtest Du Deine Daten wirklich aktualisieren?
-              </div>
-              <div class="modal-footer">
-                <button class="btn btn-success" data-dismiss="modal" (click)="onUpdate()">Aktualisieren</button>
-                <button class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+            </div>
+
+            <!-- Modal for update -->
+            <div class="modal fade" id="updatePlayer" tabindex="-1" role="dialog" aria-labelledby="updatePlayer" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="updateLabel">Spielerdaten aktualisieren</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    {{ player.firstName }}, möchtest Du Deine Daten wirklich aktualisieren?
+                  </div>
+                  <div class="modal-footer">
+                    <button class="btn btn-success" data-dismiss="modal" (click)="onUpdate()">Aktualisieren</button>
+                    <button class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
 
-        <!-- Modal for delete -->
-        <div class="modal fade" id="deletePlayer" tabindex="-1" role="dialog" aria-labelledby="deleteLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="deleteLabel">Spieler löschen</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                {{ player.firstName }}, möchtest Du Deinen gesamten Account unwiderruflich löschen?
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" (click)="onDelete()" data-dismiss="modal">{{ player?.firstName }} löschen</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+            <!-- Modal for delete -->
+            <div class="modal fade" id="deletePlayer" tabindex="-1" role="dialog" aria-labelledby="deleteLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="deleteLabel">Spieler löschen</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    {{ player.firstName }}, möchtest Du Deinen gesamten Account unwiderruflich löschen?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" (click)="onDelete()" data-dismiss="modal">{{ player?.firstName }} löschen</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
 
-      </form>
+          </form>
+
+
+
+        </div>
+      </div>
+
+
     </div>
   </div>
 
