--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,35 +1,45 @@
 <div class="container py-3">
-  <div class="row">
-    <div class="col-2 col-sm-2 col-md-3 col-lg-4"></div>
 
-    <div class="col-8 col-sm-8 col-md-6 col-lg-4">
+  <div class="row justify-content-center mb-3">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-5">
+      <div class="small">Hast Du bereits einen Account? Hier einloggen:</div>
+    </div>
+  </div>
 
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-5">
       <form #signinForm="ngForm">
-
-        <div *ngIf="!(userLoggedIn|async)">
-
-          <div class="input-group margin-bottom-sm">
-            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-            <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email Adresse" id="email">
-          </div>
-
-          <div class="input-group">
-            <span class="input-group-addon">
-          <i class="fa fa-key fa-fw"></i>
-        </span>
-            <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Passwort" aria-describedby="help"
-              id="password">
-          </div>
-
-          <div class="py-3">
-            <button (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary" style="cursor: pointer;">
-          <i class="fa fa-sign-in"></i> Anmelden</button>
-            <button (click)="onSignup()" class="btn btn-primary" style="cursor: pointer;">
-          <i class="fa fa-user-plus"></i> Registrieren</button>
-          </div>
+        <!-- <div *ngIf="!(userLoggedIn|async)"> -->
+        <div class="input-group margin-bottom-sm">
+          <span class="input-group-addon">
+            <i class="fa fa-envelope-o fa-fw"></i>
+          </span>
+          <input type="text" class="form-control" [(ngModel)]="email" name="email" placeholder="Email Adresse" id="email">
         </div>
+
+        <div class="input-group">
+          <span class="input-group-addon">
+            <i class="fa fa-key fa-fw"></i>
+          </span>
+          <input type="password" class="form-control" [(ngModel)]="password" name="password" placeholder="Passwort" aria-describedby="help"
+            id="password">
+        </div>
+
+        <div class="py-3">
+          <button type="submit" (click)="onLogin()" [disabled]="!email || !password" class="btn btn-primary" style="cursor: pointer;">
+            <i class="fa fa-sign-in"></i> Anmelden</button>
+        </div>
+        <!-- </div> -->
       </form>
     </div>
-    <div class="col-2 col-sm-8 col-md-3 col-lg-4"></div>
   </div>
+
+  <div class="row justify-content-center mb-3">
+    <div class="col-12 col-sm-10 col-md-8 col-lg-5">
+      <div class="small mb-3">Hast Du noch keinen Account?</div>
+      <button (click)="onSignup()" class="btn btn-primary" style="cursor: pointer;">
+          <i class="fa fa-user-plus"></i> Registrieren</button>
+    </div>
+  </div>
+
 </div>
